# loops-py

./: .gitignore  CONRIBUTING.md  LICENSE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: API.md
examples/: cognito_email_sender.py
loops_mcp/: README.md  server.py
mcp/: README.md  server.py
scripts/: release.sh
src/loops_py/: __init__.py  client.py  core.py  exceptions.py  models.py  types.py
src/loops_py/account/: service.py
src/loops_py/contacts/: __init__.py  service.py
src/loops_py/events/: __init__.py  service.py
src/loops_py/mailing_lists/: __init__.py  service.py
src/loops_py/transactional/: __init__.py  service.py
tests/: test_client.py
