[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "loops-py"
version = "0.1.0"
description = "Lightweight Python SDK for the Loops API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Loops Py Contributors" }
]
keywords = ["loops", "email", "api", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.6,<3",
]

[project.urls]
Homepage = "https://github.com/your-org/loops-py"
Repository = "https://github.com/your-org/loops-py"
Issues = "https://github.com/your-org/loops-py/issues"
Documentation = "https://github.com/your-org/loops-py#readme"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loops_py"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
